<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".EditUserInfoActivity">

    <EditText
        android:id="@+id/editTextNewName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:inputType="textCapWords"
        tools:text="Ира" />

    <EditText
        android:id="@+id/editTextNewLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_last_name"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:inputType="textCapWords"
        tools:text="Кузнецова" />

    <EditText
        android:id="@+id/editTextNewAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_age"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:inputType="number"
        tools:text="20" />

    <Button
        android:id="@+id/buttonSaveData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@color/orange_light"
        android:padding="8dp"
        android:text="@string/button_save" />


</androidx.appcompat.widget.LinearLayoutCompat>